--- a/light.css
+++ b/light.css
@@ -1960,13 +1960,6 @@ justify-content: center;
 
 }
 
-.body .info .skill i{
-position: absolute;
-top: -2.5rem;
-font-size: 2rem;
--webkit-text-fill-color:transparent;
--webkit-text-stroke: 1px white;
-}
 
 
 .body .info .skill i{
@@ -1974,28 +1967,28 @@ font-size: 2rem;
     top: -2.5rem;
     font-size: 2rem;
     -webkit-text-fill-color:transparent;
-    -webkit-text-stroke: 1px white;
+    -webkit-text-stroke: 1px var(--logo-color);
 }
 
 
 .body .info button{
     padding: 1rem 3rem;
-    border: .1px ridge white;
+    border: .1px ridge var(--white);
     margin-top: 1rem;
     border-radius: 0;
     font-size: 1.4rem;
     font-weight: bold;
-    background: transparent;
+    background: var(--transparent);
     -webkit-text-fill-color:transparent;
-    -webkit-text-stroke: .6px white;
+    -webkit-text-stroke: .6px var(--white);
     cursor: pointer;
 
 }
 
 .body .info button:hover{
-     background-color: white;
-    -webkit-text-fill-color:black;
-    -webkit-text-stroke: .8px rgb(2, 2, 2);
+     background-color: var(--white);
+    -webkit-text-fill-color:(--black);
+    -webkit-text-stroke: .8px rgb(--white);
 }
 
     blockquote{
